# thesis_ros

./: .gitmodules  2021-03-05-19-14-00.bag  Dockerfile  README.md  Readme.md  run-docker-image-gpu.sh
docker-workspace/: bashrc
docker-workspace/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
docker-workspace/catkin_ws/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
docker-workspace/catkin_ws/devel/.private/ros_tcp_endpoint/share/ros_tcp_endpoint/cmake/: ros_tcp_endpointConfig.cmake
docker-workspace/catkin_ws/devel/.private/ros_unity/share/ros_unity/cmake/: ros_unityConfig.cmake
docker-workspace/catkin_ws/devel/.private/ros_unity_msgs/share/ros_unity_msgs/cmake/: ros_unity_msgsConfig.cmake
docker-workspace/catkin_ws/devel/.private/rosbag_processor/share/rosbag_processor/cmake/: rosbag_processorConfig.cmake
log/: latest_list
ros_unity/: CMakeLists.txt  package.xml
ros_unity/config/: rosbridge_params.yaml
ros_unity/launch/: launch_ros_unity_connection.launch
ros_unity/src/: display_map.py  server_endpoint.py
ros_unity_msgs/: CMakeLists.txt
rosbag_processor/: CMakeLists.txt
rosbag_processor/src/: rosbag2nparray.py  visualize_bag_data.py  visualize_nparray_data.py
